--- a/index.html
+++ b/index.html
@@ -115,16 +115,19 @@
 
     <!-- Founders Section -->
     <section id="founders" class="founders">
-        <h2>Our Founders</h2>
+        <h2>Our Founder</h2>
         <div class="founders-container">
             <div class="founder-card">
                 <div class="founder-image">
                     <img src="images/founder.jpg" alt="Founder">
                 </div>
-                <h3>SK SAMIM</h3>
-                <p class="founder-role" style="color: #050708; font-weight: bold;">Founder & AI Expert</p>
-                <p class="founder-bio" style="color: #0b0b0b; font-size: 1.1rem; display: none;">Passionate about AI and technology, combining innovation with real-world applications to guide the next generation of AI professionals.</p>
-                <div class="founder-social">
+                <section id="founder">
+                    <h2>SK SAMIM</h2>
+                    
+                    <p>Founder & AI Expert</p>
+                    <p>Passionate about AI and technology...</p>
+                  </section>
+                  
                     <a href="#" class="animated-social-btn">
                         <span></span>
                         <span></span>
