--- a/index.html
+++ b/index.html
@@ -272,6 +272,40 @@
         </div>
     </section>
 
+    <!-- Research Areas -->
+    <section class="research-areas-section" id="research-areas">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Our Research Areas</h2>
+                <div class="section-underline"></div>
+                <p class="section-subtitle">Explore the diverse fields we are passionate about and actively researching.</p>
+            </div>
+            <div class="research-areas-grid">
+                <div class="research-area-card">
+                    <div class="area-icon"><i class="fas fa-robot"></i></div>
+                    <h3>Artificial Intelligence</h3>
+                    <p>Advancing machine learning, deep learning, and intelligent systems for real-world applications.</p>
+                </div>
+                <div class="research-area-card">
+                    <div class="area-icon"><i class="fas fa-microscope"></i></div>
+                    <h3>Nanotechnology</h3>
+                    <p>Innovating at the nanoscale for breakthroughs in materials, medicine, and electronics.</p>
+                </div>
+                <div class="research-area-card">
+                    <div class="area-icon"><i class="fas fa-bolt"></i></div>
+                    <h3>Renewable Energy</h3>
+                    <p>Developing sustainable energy solutions for a cleaner, greener future.</p>
+                </div>
+                <div class="research-area-card">
+                    <div class="area-icon"><i class="fas fa-dna"></i></div>
+                    <h3>Biotechnology</h3>
+                    <p>Exploring genetic engineering, bioinformatics, and medical innovations.</p>
+                </div>
+            </div>
+        </div>
+        <div class="research-bg-shape"></div>
+    </section>
+
     <!-- Faculty Section -->
     <section id="faculty" class="faculty-section">
         <div class="container">
@@ -283,7 +317,7 @@
             <div class="faculty-grid">
                 <div class="faculty-card">
                     <div class="faculty-image-placeholder">
-                        <i class="fas fa-user-tie"></i>
+                        <img src="image/Suranjan_Das.png" alt="Prof. Suranjan Das">
                     </div>
                     <div class="faculty-info">
                         <h3 class="faculty-name">Prof. Suranjan Das</h3>
@@ -293,7 +327,7 @@
                 </div>
                 <div class="faculty-card">
                     <div class="faculty-image-placeholder">
-                        <i class="fas fa-user-tie"></i>
+                        <img src="image/Prof. (Dr.) Shauli Mukherjee.png" alt="Prof. (Dr.) Shauli Mukherjee">
                     </div>
                     <div class="faculty-info">
                         <h3 class="faculty-name">Prof. (Dr.) Shauli Mukherjee</h3>
@@ -303,7 +337,7 @@
                 </div>
                 <div class="faculty-card">
                     <div class="faculty-image-placeholder">
-                        <i class="fas fa-user-tie"></i>
+                        <img src="image/Prof. (Dr.) Moumita Mukherjee.png" alt="Dr. Debdutta Pal">
                     </div>
                     <div class="faculty-info">
                         <h3 class="faculty-name">Dr. Debdutta Pal</h3>
@@ -316,59 +350,65 @@
         </div>
     </section>
 
-    <!-- Research Areas -->
-    <section id="research" class="research-section">
+    <!-- Know Our Members Section (smaller) -->
+    <section id="members" class="members-section">
         <div class="container">
             <div class="section-header">
-                <h2>Our Research Areas</h2>
-                <p>Exploring diverse dimensions of happiness and well-being</p>
+                <h2 class="section-title" style="font-size:1.7rem; margin-bottom: 0.5em;">KNOW OUR MEMBERS</h2>
             </div>
-            <div class="research-grid">
-                <div class="research-card">
-                    <div class="card-icon">
-                        <i class="fas fa-brain"></i>
+            <div class="members-grid">
+                <div class="member-card">
+                    <div class="member-info">
+                        <h3 class="member-name">Dr. Kezang Sherab</h3>
+                        <p class="member-title">Dean of Research and Industrial Linkage<br>Paro College of Education, Bhutan</p>
                     </div>
-                    <h3>Psychological Well-being</h3>
-                    <p>Mental health, emotional balance, and cognitive development studies</p>
                 </div>
-                <div class="research-card">
-                    <div class="card-icon">
-                        <i class="fas fa-heartbeat"></i>
+                <div class="member-card">
+                    <div class="member-info">
+                        <h3 class="member-name">Prof. (Dr.) Dinesh Bhatia</h3>
+                        <p class="member-title">Department of Biomedical Engineering<br>North Eastern Hill University<br>Shillong-793022</p>
                     </div>
-                    <h3>Physical Health</h3>
-                    <p>Healthcare access, nutrition, and lifestyle impact research</p>
                 </div>
-                <div class="research-card">
-                    <div class="card-icon">
-                        <i class="fas fa-clock"></i>
+                <div class="member-card">
+                    <div class="member-info">
+                        <h3 class="member-name">Luis Gallardo</h3>
+                        <p class="member-title">Founder & President<br>World Happiness Foundation</p>
                     </div>
-                    <h3>Time Balance</h3>
-                    <p>Work-life balance and leisure time utilization studies</p>
                 </div>
-                <div class="research-card">
-                    <div class="card-icon">
-                        <i class="fas fa-graduation-cap"></i>
+                <div class="member-card">
+                    <div class="member-info">
+                        <h3 class="member-name">GauriShanker Kaloiya</h3>
+                        <p class="member-title">Professor of Clinical Psychology<br>National Drug Dependence Treatment Centre (NDDTC)<br>All India Institute of Medical Sciences (AIIMS)</p>
                     </div>
-                    <h3>Education</h3>
-                    <p>Learning outcomes and educational system effectiveness</p>
                 </div>
-                <div class="research-card">
-                    <div class="card-icon">
-                        <i class="fas fa-home"></i>
+                <div class="member-card">
+                    <div class="member-info">
+                        <h3 class="member-name">Dr. Dorji Thinley</h3>
+                        <p class="member-title">President<br>Paro College of Education, Bhutan</p>
                     </div>
-                    <h3>Living Standards</h3>
-                    <p>Economic well-being and quality of life measurements</p>
                 </div>
-                <div class="research-card">
-                    <div class="card-icon">
-                        <i class="fas fa-hands-helping"></i>
+                <div class="member-card">
+                    <div class="member-info">
+                        <h3 class="member-name">Dr. Debatri Chatterjee</h3>
+                        <p class="member-title">Senior Scientist, TCS Research<br>IIT-Kharagpur Research Park<br>for Pediatric Neurosurgery</p>
                     </div>
-                    <h3>Community Vitality</h3>
-                    <p>Social cohesion and community engagement research</p>
+                </div>
+                <div class="member-card">
+                    <div class="member-info">
+                        <h3 class="member-name">Suchanda Bhattacharjee</h3>
+                        <p class="member-title">Prof. of Neurosurgery<br>Nizam's Institute of Medical Sciences, Hyderabad, India<br>Membership Committee Chair [International Society for Pediatric Neurosurgery]</p>
+                    </div>
+                </div>
+                <div class="member-card">
+                    <div class="member-info">
+                        <h3 class="member-name">Mr. Bhudeb Chakravarti</h3>
+                        <p class="member-title">Scientist, DRDO</p>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
+    <!-- End Know Our Members Section -->
 
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
