--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <div class="nav-menu">
                 <a href="#home" class="nav-link active">Home</a>
                 <a href="#about" class="nav-link">About</a>
-                <a href="#research" class="nav-link">Research</a>
+                <a href="#research-areas" class="nav-link">Research</a>
+                <a href="#faculty" class="nav-link">Faculty</a>
                 <a href="#news" class="nav-link">News</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
@@ -307,13 +308,25 @@
     </section>
 
     <!-- Faculty Section -->
-    <section id="faculty" class="faculty-section">
+    <section id="centre-excellence" class="centre-excellence-section">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title">CENTRE OF EXCELLENCE</h2>
                 <p class="section-subtitle">Research on Science of Happiness</p>
             </div>
-            
+            <div class="centre-excellence-content" style="text-align:center; max-width:700px; margin:0 auto;">
+                <h3>About the Centre</h3>
+                <p>The Centre of Excellence for GNH (Gross National Happiness) Studies and Research at Adamas University is dedicated to advancing the science of happiness through innovative research, leadership, and collaboration. Our mission is to integrate holistic well-being into education, research, and societal progress, guided by the principles of GNH.</p>
+                <p>Led by distinguished leaders and faculty, the Centre fosters a multidisciplinary platform for transformative education and research in India and beyond.</p>
+            </div>
+        </div>
+    </section>
+    <section id="faculty" class="faculty-section">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Faculty</h2>
+                <p class="section-subtitle">Meet our distinguished faculty members</p>
+            </div>
             <div class="faculty-grid">
                 <div class="faculty-card">
                     <div class="faculty-image-placeholder">
@@ -345,61 +358,88 @@
                         <p class="faculty-title">Professor, Department of Computer Science and Engineering</p>
                     </div>
                 </div>
-              
             </div>
         </div>
     </section>
 
-    <!-- Know Our Members Section (smaller) -->
-    <section id="members" class="members-section">
+    <!-- Centre of Excellence Section -->
+
+
+    <!-- Know Our Members Section (toggleable) -->
+    <section id="members" class="members-section" aria-label="Know Our Members" style="display:none;">
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title" style="font-size:1.7rem; margin-bottom: 0.5em;">KNOW OUR MEMBERS</h2>
+                <button class="close-members-section" aria-label="Close Members Section" style="display:none;position:absolute;top:18px;right:18px;font-size:1.5rem;background:none;border:none;cursor:pointer;z-index:10;">&times;</button>
             </div>
             <div class="members-grid">
                 <div class="member-card">
+                    <div class="member-image-placeholder">
+                        <img src="image/Dr. Kezang Sherab.png" alt="Dr. Kezang Sherab" onerror="this.onerror=null;this.src='https://ui-avatars.com/api/?name=Kezang+Sherab&background=eee&color=555&size=128';">
+                    </div>
                     <div class="member-info">
                         <h3 class="member-name">Dr. Kezang Sherab</h3>
                         <p class="member-title">Dean of Research and Industrial Linkage<br>Paro College of Education, Bhutan</p>
                     </div>
                 </div>
                 <div class="member-card">
+                    <div class="member-image-placeholder">
+                        <img src="image/Prof. (Dr.) Dinesh Bhatia.png" alt="Prof. (Dr.) Dinesh Bhatia" onerror="this.onerror=null;this.src='https://ui-avatars.com/api/?name=Dinesh+Bhatia&background=eee&color=555&size=128';">
+                    </div>
                     <div class="member-info">
                         <h3 class="member-name">Prof. (Dr.) Dinesh Bhatia</h3>
                         <p class="member-title">Department of Biomedical Engineering<br>North Eastern Hill University<br>Shillong-793022</p>
                     </div>
                 </div>
                 <div class="member-card">
+                    <div class="member-image-placeholder">
+                        <img src="image/Luis Gallardo.png" alt="Luis Gallardo" onerror="this.onerror=null;this.src='https://ui-avatars.com/api/?name=Luis+Gallardo&background=eee&color=555&size=128';">
+                    </div>
                     <div class="member-info">
                         <h3 class="member-name">Luis Gallardo</h3>
                         <p class="member-title">Founder & President<br>World Happiness Foundation</p>
                     </div>
                 </div>
                 <div class="member-card">
+                    <div class="member-image-placeholder">
+                        <img src="image/GauriShanker Kaloiya .png" alt="GauriShanker Kaloiya" onerror="this.onerror=null;this.src='https://ui-avatars.com/api/?name=GauriShanker+Kaloiya&background=eee&color=555&size=128';">
+                    </div>
                     <div class="member-info">
                         <h3 class="member-name">GauriShanker Kaloiya</h3>
                         <p class="member-title">Professor of Clinical Psychology<br>National Drug Dependence Treatment Centre (NDDTC)<br>All India Institute of Medical Sciences (AIIMS)</p>
                     </div>
                 </div>
                 <div class="member-card">
+                    <div class="member-image-placeholder">
+                        <img src="image/Dr. Dorji Thinley.png" alt="Dr. Dorji Thinley" onerror="this.onerror=null;this.src='https://ui-avatars.com/api/?name=Dorji+Thinley&background=eee&color=555&size=128';">
+                    </div>
                     <div class="member-info">
                         <h3 class="member-name">Dr. Dorji Thinley</h3>
                         <p class="member-title">President<br>Paro College of Education, Bhutan</p>
                     </div>
                 </div>
                 <div class="member-card">
+                    <div class="member-image-placeholder">
+                        <img src="image/Dr. Debatri Chatterjee.png" alt="Dr. Debatri Chatterjee" onerror="this.onerror=null;this.src='https://ui-avatars.com/api/?name=Debatri+Chatterjee&background=eee&color=555&size=128';">
+                    </div>
                     <div class="member-info">
                         <h3 class="member-name">Dr. Debatri Chatterjee</h3>
                         <p class="member-title">Senior Scientist, TCS Research<br>IIT-Kharagpur Research Park<br>for Pediatric Neurosurgery</p>
                     </div>
                 </div>
                 <div class="member-card">
+                    <div class="member-image-placeholder">
+                        <img src="image/Suchanda Bhattacharjee.png" alt="Suchanda Bhattacharjee" onerror="this.onerror=null;this.src='https://ui-avatars.com/api/?name=Suchanda+Bhattacharjee&background=eee&color=555&size=128';">
+                    </div>
                     <div class="member-info">
                         <h3 class="member-name">Suchanda Bhattacharjee</h3>
                         <p class="member-title">Prof. of Neurosurgery<br>Nizam's Institute of Medical Sciences, Hyderabad, India<br>Membership Committee Chair [International Society for Pediatric Neurosurgery]</p>
                     </div>
                 </div>
                 <div class="member-card">
+                    <div class="member-image-placeholder">
+                        <img src="image/Mr. Bhudeb Chakravarti.png" alt="Mr. Bhudeb Chakravarti" onerror="this.onerror=null;this.src='https://ui-avatars.com/api/?name=Bhudeb+Chakravarti&background=eee&color=555&size=128';">
+                    </div>
                     <div class="member-info">
                         <h3 class="member-name">Mr. Bhudeb Chakravarti</h3>
                         <p class="member-title">Scientist, DRDO</p>
@@ -536,7 +576,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Adamas Institute of Technology. All rights reserved. | Affiliated with Maulana Abul Kalam Azad University of Technology, West Bengal</p>
+                <p>&copy; 2024 Adamas Institute of Technology. All rights reserved. | West Bengal | Develop By Samim</p>
             </div>
         </div>
     </footer>
