--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <h3>Breakthrough in Sustainable Development Metrics</h3>
                         <p>Our research team has developed innovative metrics for measuring sustainable development that incorporate traditional GNH principles with modern data science approaches.</p>
                         <div class="news-meta">
-                            <span><i class="fas fa-calendar"></i> March 15, 2024</span>
+                            <span><i class="fas fa-calendar"></i> March 15, 2025</span>
                             <span><i class="fas fa-user"></i> Dr. Sarah Chen</span>
                         </div>
                         <a href="#" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
@@ -132,7 +132,7 @@
                         <h3>International Partnership with Bhutan Research Institute</h3>
                         <p>We're excited to announce a new partnership with the Bhutan Research Institute to advance GNH studies and promote cross-cultural research methodologies.</p>
                         <div class="news-meta">
-                            <span><i class="fas fa-calendar"></i> March 12, 2024</span>
+                            <span><i class="fas fa-calendar"></i> March 12, 2025</span>
                             <span><i class="fas fa-user"></i> Prof. Michael Rodriguez</span>
                         </div>
                         <a href="#" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
@@ -148,7 +148,7 @@
                         <h3>New Study on Mental Health and Community Well-being</h3>
                         <p>Our latest research explores the correlation between community engagement, mental health outcomes, and overall happiness indices in urban environments.</p>
                         <div class="news-meta">
-                            <span><i class="fas fa-calendar"></i> March 10, 2024</span>
+                            <span><i class="fas fa-calendar"></i> March 10, 2025</span>
                             <span><i class="fas fa-user"></i> Dr. Emily Watson</span>
                         </div>
                         <a href="#" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
@@ -164,7 +164,7 @@
                         <h3>AI-Powered Happiness Assessment Tool Launch</h3>
                         <p>We've developed a revolutionary AI tool that provides real-time happiness assessments using advanced machine learning algorithms and psychological frameworks.</p>
                         <div class="news-meta">
-                            <span><i class="fas fa-calendar"></i> March 8, 2024</span>
+                            <span><i class="fas fa-calendar"></i> March 8, 2025</span>
                             <span><i class="fas fa-user"></i> Dr. Alex Kim</span>
                         </div>
                         <a href="#" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
@@ -544,10 +544,10 @@
                         <p>Excellence in technical education and innovation since 2008</p>
                     </div>
                     <div class="social-links">
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-facebook"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="wip.html"><i class="fab fa-twitter"></i></a>
+                        <a href="wip.html"><i class="fab fa-linkedin"></i></a>
+                        <a href="wip.html"><i class="fab fa-facebook"></i></a>
+                        <a href="wip.html"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="footer-section">
@@ -562,10 +562,10 @@
                 <div class="footer-section">
                     <h4>Academic Programs</h4>
                     <ul>
-                        <li><a href="#">Engineering Programs</a></li>
-                        <li><a href="#">Technical Education</a></li>
-                        <li><a href="#">Research & Development</a></li>
-                        <li><a href="#">Student Life</a></li>
+                        <li><a href="wip.html">Engineering Programs</a></li>
+                        <li><a href="wip.html">Technical Education</a></li>
+                        <li><a href="wip.html">Research & Development</a></li>
+                        <li><a href="wip.html">Student Life</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -576,7 +576,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 Adamas Institute of Technology. All rights reserved. | West Bengal | Develop By Samim</p>
+                <p>&copy; 2025 Adamas Institute of Technology. All rights reserved. | West Bengal | Develope By Samim</p>
             </div>
         </div>
     </footer>
