--- a/index.html
+++ b/index.html
@@ -330,6 +330,16 @@
             <div class="faculty-grid">
                 <div class="faculty-card">
                     <div class="faculty-image-placeholder">
+                        <img src="image/Debdutta Pal.png" alt="Dr. Debdutta Pal">
+                    </div>
+                    <div class="faculty-info">
+                        <h3 class="faculty-name">Dr. Debdutta Pal</h3>
+                        <p class="faculty-role">Coordinator</p>
+                        <p class="faculty-title">Professor, Department of Computer Science and Engineering</p>
+                    </div>
+                </div>
+                <div class="faculty-card">
+                    <div class="faculty-image-placeholder">
                         <img src="image/Suranjan_Das.png" alt="Prof. Suranjan Das">
                     </div>
                     <div class="faculty-info">
@@ -353,9 +363,9 @@
                         <img src="image/Prof. (Dr.) Moumita Mukherjee.png" alt="Dr. Debdutta Pal">
                     </div>
                     <div class="faculty-info">
-                        <h3 class="faculty-name">Dr. Debdutta Pal</h3>
-                        <p class="faculty-role">Coordinator</p>
-                        <p class="faculty-title">Professor, Department of Computer Science and Engineering</p>
+                        <h3 class="faculty-name">Dr.Moumita Mukherjee</h3>
+                        <p class="faculty-role">Convener</p>
+                        <p class="faculty-title">Professor, Department of Physics Dean Research & Depelopment , Adamas University, India</p>
                     </div>
                 </div>
             </div>
