update Research Part

--- a/index.html
+++ b/index.html
@@ -279,28 +279,158 @@
             <div class="section-header">
                 <h2 class="section-title">Our Research Areas</h2>
                 <div class="section-underline"></div>
-                <p class="section-subtitle">Explore the diverse fields we are passionate about and actively researching.</p>
+                <p class="section-subtitle">Exploring comprehensive dimensions of happiness and well-being through multidisciplinary research</p>
             </div>
+            
+                <!-- Research Filter Buttons -->
+                <div class="research-filters">
+                    <button class="filter-btn active" data-filter="all">All Areas</button>
+                    <button class="filter-btn" data-filter="sustainability">Sustainability</button>
+                    <button class="filter-btn" data-filter="education">Education</button>
+                    <button class="filter-btn" data-filter="psychology">Psychology</button>
+                    <button class="filter-btn" data-filter="policy">Policy</button>
+                    <button class="filter-btn" data-filter="culture">Culture</button>
+                    <button class="filter-btn" data-filter="technology">Technology</button>
+                    <button class="filter-btn" data-filter="economics">Economics</button>
+                    <button class="filter-btn" data-filter="health">Health</button>
+                </div>
+
             <div class="research-areas-grid">
-                <div class="research-area-card">
-                    <div class="area-icon"><i class="fas fa-robot"></i></div>
-                    <h3>Artificial Intelligence</h3>
-                    <p>Advancing machine learning, deep learning, and intelligent systems for real-world applications.</p>
+                <!-- 1. GNH and Sustainable Development -->
+                <div class="research-area-card" data-category="sustainability">
+                    <div class="area-icon">
+                        <i class="fas fa-leaf"></i>
+                    </div>
+                    <div class="area-content">
+                        <h3>1. GNH and Sustainable Development</h3>
+                        <ul class="research-topics">
+                            <li>Evaluating the Role of GNH in Achieving Sustainable Development Goals (SDGs)</li>
+                            <li>Community-Based Indicators for Happiness and Sustainability</li>
+                            <li>Green Economy Models Inspired by GNH Philosophy</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="research-area-card">
-                    <div class="area-icon"><i class="fas fa-microscope"></i></div>
-                    <h3>Nanotechnology</h3>
-                    <p>Innovating at the nanoscale for breakthroughs in materials, medicine, and electronics.</p>
+
+                <!-- 2. Education and Happiness -->
+                <div class="research-area-card" data-category="education">
+                    <div class="area-icon">
+                        <i class="fas fa-graduation-cap"></i>
+                    </div>
+                    <div class="area-content">
+                        <h3>2. Education and Happiness</h3>
+                        <ul class="research-topics">
+                            <li>Integrating GNH Values in School and University Curricula</li>
+                            <li>The Impact of Mindfulness and Contemplative Pedagogy on Student Well-Being</li>
+                            <li>Teacher Well-Being and Its Influence on Learning Outcomes</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="research-area-card">
-                    <div class="area-icon"><i class="fas fa-bolt"></i></div>
-                    <h3>Renewable Energy</h3>
-                    <p>Developing sustainable energy solutions for a cleaner, greener future.</p>
+
+                <!-- 3. Psychology and Mental Well-Being -->
+                <div class="research-area-card" data-category="psychology">
+                    <div class="area-icon">
+                        <i class="fas fa-brain"></i>
+                    </div>
+                    <div class="area-content">
+                        <h3>3. Psychology and Mental Well-Being</h3>
+                        <ul class="research-topics">
+                            <li>Comparative Study of GNH and Western Positive Psychology</li>
+                            <li>Mental Health, Mindfulness, and GNH: A Holistic Approach to Well-being</li>
+                            <li>Youth Happiness and Social Media Usage in the Digital Age</li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="research-area-card">
-                    <div class="area-icon"><i class="fas fa-dna"></i></div>
-                    <h3>Biotechnology</h3>
-                    <p>Exploring genetic engineering, bioinformatics, and medical innovations.</p>
+
+                <!-- 4. GNH and Public Policy -->
+                <div class="research-area-card" data-category="policy">
+                    <div class="area-icon">
+                        <i class="fas fa-balance-scale"></i>
+                    </div>
+                    <div class="area-content">
+                        <h3>4. GNH and Public Policy</h3>
+                        <ul class="research-topics">
+                            <li>Policy Assessment Using GNH Metrics: Case Studies from Local Governance</li>
+                            <li>GNH-Informed Urban Planning and Infrastructure Development</li>
+                            <li>Participatory Governance and Happiness: Evaluating Citizen Trust and Engagement</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- 5. Cultural Resilience and Spirituality -->
+                <div class="research-area-card" data-category="culture">
+                    <div class="area-icon">
+                        <i class="fas fa-pray"></i>
+                    </div>
+                    <div class="area-content">
+                        <h3>5. Cultural Resilience and Spirituality</h3>
+                        <ul class="research-topics">
+                            <li>Indigenous Wisdom and Happiness: A Comparative Study</li>
+                            <li>The Role of Spiritual Practices in Enhancing Community Well-Being</li>
+                            <li>Preserving Intangible Cultural Heritage for Intergenerational Happiness</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- 6. GNH and Technology -->
+                <div class="research-area-card" data-category="technology">
+                    <div class="area-icon">
+                        <i class="fas fa-microchip"></i>
+                    </div>
+                    <div class="area-content">
+                        <h3>6. GNH and Technology</h3>
+                        <ul class="research-topics">
+                            <li>Digital Well-being: Can Technology Enhance or Inhibit GNH?</li>
+                            <li>AI for GNH: Designing Ethical and Empathetic Technologies</li>
+                            <li>The Role of E-Governance in Promoting Transparent and Happy Societies</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- 7. Economics and GNH -->
+                <div class="research-area-card" data-category="economics">
+                    <div class="area-icon">
+                        <i class="fas fa-chart-line"></i>
+                    </div>
+                    <div class="area-content">
+                        <h3>7. Economics and GNH</h3>
+                        <ul class="research-topics">
+                            <li>Beyond GDP: Developing Alternative Economic Indicators Based on GNH</li>
+                            <li>Corporate Social Responsibility and Happiness-Oriented Business Models</li>
+                            <li>The Impact of Income Inequality on National Happiness Levels</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- 8. Health and Environment -->
+                <div class="research-area-card" data-category="health">
+                    <div class="area-icon">
+                        <i class="fas fa-heartbeat"></i>
+                    </div>
+                    <div class="area-content">
+                        <h3>8. Health and Environment</h3>
+                        <ul class="research-topics">
+                            <li>Linking Environmental Conservation to Community Happiness</li>
+                            <li>Ecopsychology: Nature Connection and Subjective Well-Being</li>
+                            <li>Healthcare Access and GNH: A Human-Centered Evaluation</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Interdisciplinary Project Ideas Section -->
+            <div class="interdisciplinary-banner">
+                <div class="banner-content">
+                    <div class="banner-icon">🌟</div>
+                    <div class="banner-text">
+                        <h3>Interdisciplinary Project Ideas</h3>
+                        <div class="project-list">
+                            <span class="project-item">Designing a Local GNH Index for Urban and Rural Communities</span>
+                            <span class="project-separator"></span>
+                            <span class="project-item">Storytelling as a Tool for Measuring Subjective Happiness</span>
+                            <span class="project-separator"></span>
+                            <span class="project-item">Using GIS and Remote Sensing to Map Happiness Hotspots in Communities</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
